[project]
name = "temp-seq-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "matplot>=0.1.9",
    "numpy>=2.2.6",
    "panda>=0.3.1",
    "pandas>=2.3.3",
    "pypots>=1.3",
    "tensorflow>=2.21.0",
    "torch>=2.11.0",
]
